--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "youcode/wiki",
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
-            "Core\\": "core/"
+            "App\\": "app/"
+            
         }
     },
     "authors": [
