--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,8 +1,7 @@
-<IfModule mod_rewrite.c>
+ RewriteEngine On
 
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php?uri=$1 [QSA,L]
 
-</IfModule>
+    # Redirect all requests to index.php
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
