--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,6 @@
- RewriteEngine On
-
-
-    # Redirect all requests to index.php
-    RewriteCond %{REQUEST_FILENAME} !-f
+<IfModule mod_rewrite.c>
+    RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ index.php?uri=$1 [QSA,L]
+</IfModule>
